// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders event categories ui correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    appearance="default"
    level="1"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": 20,
        },
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flexGrow": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        appearance="default"
        level="1"
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
            },
            Object {
              "flex": 1,
              "justifyContent": "space-around",
            },
          ]
        }
      >
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "marginVertical": 15,
              },
            ]
          }
        >
          <Text
            appearance="hint"
            category="h5"
            style={
              Array [
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            List out some categories that describe your event!
          </Text>
          <View
            onLayout={[Function]}
          >
            <View
              style={Object {}}
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#F7F9FC",
                      "borderColor": "#E4E9F2",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "minHeight": 40,
                      "paddingHorizontal": 8,
                      "paddingVertical": 7,
                    },
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "width": "100%",
                    },
                  ]
                }
              >
                <TextInput
                  allowFontScaling={true}
                  appearance="default"
                  editable={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onSelect={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Choose some categories"
                  placeholderTextColor="#8F9BB3"
                  rejectResponderTermination={true}
                  size="medium"
                  status="basic"
                  style={
                    Array [
                      Object {
                        "color": "#222B45",
                        "fontFamily": "System",
                        "fontSize": 15,
                        "fontWeight": "normal",
                        "marginHorizontal": 8,
                      },
                      Object {
                        "flexBasis": "auto",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      null,
                      undefined,
                    ]
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "marginTop": 4,
                    },
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <Text
                  appearance="default"
                  category="p1"
                  style={
                    Array [
                      Object {
                        "color": "#222B45",
                        "fontFamily": "System",
                        "fontSize": 15,
                        "fontWeight": "400",
                      },
                      Array [
                        Object {
                          "color": "#8F9BB3",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                      ],
                    ]
                  }
                >
                  Click on the options to select them
                </Text>
              </View>
            </View>
          </View>
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                },
              ]
            }
          />
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "marginVertical": 15,
              },
            ]
          }
        >
          <Text
            appearance="hint"
            category="h5"
            style={
              Array [
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            What size should groups be?
          </Text>
          <View>
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                  ],
                ]
              }
            >
              Group size
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onLayout={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F7F9FC",
                  "borderColor": "#E4E9F2",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "minHeight": 40,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 7,
                  "placeholderMarginHorizontal": 8,
                }
              }
            >
              <Text
                appearance="default"
                category="p1"
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "flex": 1,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 15,
                        "fontWeight": "400",
                        "marginHorizontal": 8,
                      },
                      Object {
                        "color": "#222B45",
                        "fontFamily": "System",
                        "fontSize": 15,
                        "fontWeight": "600",
                        "marginHorizontal": 8,
                      },
                    ],
                  ]
                }
              >
                4
              </Text>
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={24}
                  bbWidth={24}
                  fill="#8F9BB3"
                  focusable={false}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "height": 24,
                        "marginHorizontal": 8,
                        "tintColor": "#8F9BB3",
                        "width": 24,
                      },
                      Object {
                        "flex": 0,
                        "height": 24,
                        "width": 24,
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                >
                  <RNSVGGroup
                    fill={4287601587}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGGroup>
                      <RNSVGGroup>
                        <RNSVGRect
                          height="24"
                          opacity={0}
                          width="24"
                          x={0}
                          y={0}
                        />
                        <RNSVGPath
                          d="M9 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4z"
                        />
                        <RNSVGPath
                          d="M17 13a3 3 0 1 0-3-3 3 3 0 0 0 3 3z"
                        />
                        <RNSVGPath
                          d="M21 20a1 1 0 0 0 1-1 5 5 0 0 0-8.06-3.95A7 7 0 0 0 2 20a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1"
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "flexDirection": "row",
                "marginTop": 20,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Prev
            </Text>
          </View>
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          />
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Next
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders event details UI correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    appearance="default"
    level="1"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": 20,
        },
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flexGrow": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <Text
            appearance="hint"
            category="h5"
            style={
              Array [
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            Tell us more about your event.
          </Text>
          <View
            style={
              Object {
                "marginBottom": 35,
                "marginTop": 10,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Title
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                blurOnSubmit={false}
                editable={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Event title"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                appearance="default"
                category="p1"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Write something to attract new participants
              </Text>
            </View>
          </View>
          <View
            style={Object {}}
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Description
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                editable={true}
                multiline={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter a description for your event"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    Object {
                      "minHeight": 100,
                    },
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                appearance="default"
                category="p1"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Let people know what your event is about
              </Text>
            </View>
          </View>
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "flexDirection": "row",
                "marginTop": 20,
              },
            ]
          }
        >
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          />
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Next
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders event images ui correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    appearance="default"
    level="1"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": 20,
        },
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flexGrow": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        appearance="default"
        level="1"
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          appearance="hint"
          category="h5"
          style={
            Array [
              Object {
                "color": "#8F9BB3",
                "fontFamily": "System",
                "fontSize": 22,
                "fontWeight": "800",
              },
              Object {
                "marginBottom": 20,
              },
            ]
          }
        >
          Upload images to decorate your listing!
        </Text>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#fbfbfb",
                "borderColor": "#ebebeb",
                "shadowColor": "#fcfcfc",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "width": "100%",
              }
            }
          >
            <RCTScrollView
              contentContainerStyle={
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "overflow": "hidden",
                  "width": "100%",
                }
              }
              decelerationRate="fast"
              horizontal={true}
              onContentSizeChange={[Function]}
              onScroll={[Function]}
              pagingEnabled={true}
              scrollEventThrottle={200}
              showsHorizontalScrollIndicator={false}
            >
              <View>
                <Image
                  height={250}
                  resizeMethod="auto"
                  resizeMode="contain"
                  source={
                    Object {
                      "uri": "https://groupfinda.s3-ap-southeast-1.amazonaws.com/fun.png",
                    }
                  }
                  style={
                    Object {
                      "maxWidth": "100%",
                      "width": "100%",
                    }
                  }
                />
              </View>
            </RCTScrollView>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "bottom": 0,
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "position": "absolute",
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 20,
                    "opacity": 0.5,
                    "paddingHorizontal": 5,
                  }
                }
              >
                •
              </Text>
            </View>
          </View>
        </View>
        <View
          appearance="default"
          level="4"
          style={
            Array [
              Object {
                "backgroundColor": "#E4E9F2",
              },
              Object {
                "borderColor": "rgba(0,0,0,0.5)",
                "borderStyle": "dashed",
                "borderWidth": 5,
                "height": 100,
                "width": "100%",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={32}
                bbWidth={32}
                fill="grey"
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "fontSize": 20,
                      "height": 32,
                      "width": 32,
                    },
                    Object {
                      "flex": 0,
                      "height": 32,
                      "width": 32,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup
                  fill={4286611584}
                  font={
                    Object {
                      "fontSize": 20,
                    }
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGGroup>
                    <RNSVGGroup>
                      <RNSVGRect
                        height="24"
                        matrix={
                          Array [
                            -1,
                            1.2246467991473532e-16,
                            -1.2246467991473532e-16,
                            -1,
                            24,
                            24,
                          ]
                        }
                        opacity={0}
                        width="24"
                        x={0}
                        y={0}
                      />
                      <RNSVGPath
                        d="M19 11h-6V5a1 1 0 0 0-2 0v6H5a1 1 0 0 0 0 2h6v6a1 1 0 0 0 2 0v-6h6a1 1 0 0 0 0-2z"
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "flexDirection": "row",
                "marginTop": 20,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Prev
            </Text>
          </View>
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          />
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Next
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders event location ui correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    appearance="default"
    level="1"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": 20,
        },
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flexGrow": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        appearance="default"
        level="1"
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
            },
            Object {
              "flex": 1,
              "justifyContent": "space-around",
            },
          ]
        }
      >
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "marginVertical": 10,
              },
            ]
          }
        >
          <Text
            appearance="hint"
            category="h5"
            style={
              Array [
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            Where is this event taking place?
          </Text>
          <View
            style={
              Object {
                "marginBottom": 35,
                "marginTop": 10,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Address
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                blurOnSubmit={false}
                editable={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Address of event"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                appearance="default"
                category="p1"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Let users know where your event is taking place
              </Text>
            </View>
          </View>
          <View
            style={Object {}}
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Postal Code
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                editable={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter postal code"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "flexDirection": "row",
                "marginTop": 20,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Prev
            </Text>
          </View>
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          />
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Next
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
